@@ -5,6 +5,8 @@
 
 - only show underline on links when hovering.
 
+- make the "description hasn't been rendered" warning stand out.
+
 - version.pt: moved md5 sum from it's own column to the file column below the
   download link
 
